--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Curriculum Vanessa Villagra</title>
+<script src="https://kit.fontawesome.com/fba55dc263.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+ 
+            <h1>VANESSA ELIZABETH VILLAGRA CERECEDA</h1>
 </body>
 </html>
+</header>
+<aside class="details">
+  <h2>DETALLES <i class="fa-solid fa-headphones"></i></h2>
+  <p><strong>Email:</strong> vanessa.cereceda@gmail.com</p>
+  <p><strong>Teléfono:</strong> +56 9 7947 6776</p>
+  <p><strong>Ubicación:</strong> Santiago, Chile</p>
+</aside>
+<section class="profile">
+  <h2>PERFIL <i class="fa-solid fa-user-pen"></i></h2>
+  <p>Técnico en Turismo con vasta experiencia en el área turística, especializada en atención y fidelización de clientes, tanto presencial como venta online.</p>
+</section>
+<section class="studies">
+  <h2>ESTUDIOS <i class="fa-solid fa-graduation-cap"></i></h2>
+  <p>Especialidad: Técnico en Turismo, Turismo Cocha S.A (2007-2008)</p>
+  <p>Enseñanza Media: Liceo Particular Eyzaguirre (2003-2006)</p>
+  <p>Enseñanza Básica: Fundación Domingo Matte Mesías (1995-2002)</p>
+  <p>Cursos Adicionales: Atención al cliente, Liderazgo, Capacitaciones en Hoteles y Destinos Turísticos.</p>
+</section>
