--- a/index.html
+++ b/index.html
@@ -30,3 +30,37 @@
   <p>Enseñanza Básica: Fundación Domingo Matte Mesías (1995-2002)</p>
   <p>Cursos Adicionales: Atención al cliente, Liderazgo, Capacitaciones en Hoteles y Destinos Turísticos.</p>
 </section>
+
+<section class="work-experience">
+    <h2>EXPERIENCIA LABORAL <i class="fa-solid fa-briefcase"></i></h2>
+    <ul>
+        <li><i class="fas fa-plane"></i> TURISMO COCHA, Consultora de Viajes (Abril 2008 - Julio 2018)</li>
+        <li><i class="fas fa-phone"></i> Grupo Unísono, Atención al cliente (Septiembre 2020 - Julio 2022)</li>
+        <li><i class="fas fa-carrot"></i> Agrolam Ltda, Supervisora Retail (Julio 2022 - Presente)</li>
+    </ul>
+    <img src="C:/Users/vanes/OneDrive/Escritorio/avion.jpg" alt="Avión" style="width: 80%; height: auto;">
+</section>
+<section class="hobbies">
+  <h2>HOBBIES <i class="fa-brands fa-square-web-awesome-stroke"></i></h2>
+  <ul>
+    <li><i class="fas fa-plane"></i> Viajar</li>
+    <li><i class="fa-solid fa-bicycle"></i> Gimnasio</li>
+    <li><i class="fa-solid fa-hiking"></i> Trekking</li>
+    
+    
+  </ul>
+</section>
+<section class="extra-content">
+    <h2>INSPIRACIÓN <i class="fa-solid fa-fire"></i></h2>
+    <p>"Viajar es descubrir que todos están equivocados sobre los otros países." - Aldous Huxley</p>
+</section>
+<footer>
+    <div id="outer">
+        <div class="button_slide slide_left">
+            <a href="https://github.com/Vane2130/Vane"><i class="fa-brands fa-github"></i>GitHub Vanessa Villagra<i class="fa-brands fa-github"></i></a>
+        </div>
+    </div>
+</footer>
+</div>
+</body>
+</html>
