--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
+  <div class="resume">
+    <header>
+        <div class="fotografia">
+            <img src="file:///C:/Users/vanes/OneDrive/Escritorio/Vane.jpg" alt="Foto de Vane">
+        </div> 
             <h1>VANESSA ELIZABETH VILLAGRA CERECEDA</h1>
 </body>
 </html>
@@ -46,6 +50,8 @@
     <li><i class="fas fa-plane"></i> Viajar</li>
     <li><i class="fa-solid fa-bicycle"></i> Gimnasio</li>
     <li><i class="fa-solid fa-hiking"></i> Trekking</li>
+
+    <img src="C:\Users\vanes\OneDrive\Escritorio\san francisco.jpg" alt="san francisco" style="width: 100%; height: auto; border-radius: 5px;">
     
     
   </ul>
