--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h2>HOBBIES <i class="fa-brands fa-square-web-awesome-stroke"></i></h2>
   <ul>
     <li><i class="fas fa-plane"></i> Viajar</li>
-    <li><i class="fa-solid fa-bicycle"></i> Gimnasio</li>
+    <li><i class="fa-solid fa-dumbbell"></i> Gimnasio</li>
     <li><i class="fa-solid fa-hiking"></i> Trekking</li>
 
     <img src="C:\Users\vanes\OneDrive\Escritorio\san francisco.jpg" alt="san francisco" style="width: 100%; height: auto; border-radius: 5px;">
