--- a/index.html
+++ b/index.html
@@ -4,69 +4,65 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Curriculum Vanessa Villagra</title>
-<script src="https://kit.fontawesome.com/fba55dc263.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="style.css">
+<script src="https://kit.fontawesome.com/fba55dc263.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="resume">
     <header>
-        <div class="fotografia">
-            <img src="file:///C:/Users/vanes/OneDrive/Escritorio/Vane.jpg" alt="Foto de Vane">
-        </div> 
-            <h1>VANESSA ELIZABETH VILLAGRA CERECEDA</h1>
-</body>
-</html>
-</header>
-<aside class="details">
-  <h2>DETALLES <i class="fa-solid fa-headphones"></i></h2>
-  <p><strong>Email:</strong> vanessa.cereceda@gmail.com</p>
-  <p><strong>Teléfono:</strong> +56 9 7947 6776</p>
-  <p><strong>Ubicación:</strong> Santiago, Chile</p>
-</aside>
-<section class="profile">
-  <h2>PERFIL <i class="fa-solid fa-user-pen"></i></h2>
-  <p>Técnico en Turismo con vasta experiencia en el área turística, especializada en atención y fidelización de clientes, tanto presencial como venta online.</p>
-</section>
-<section class="studies">
-  <h2>ESTUDIOS <i class="fa-solid fa-graduation-cap"></i></h2>
-  <p>Especialidad: Técnico en Turismo, Turismo Cocha S.A (2007-2008)</p>
-  <p>Enseñanza Media: Liceo Particular Eyzaguirre (2003-2006)</p>
-  <p>Enseñanza Básica: Fundación Domingo Matte Mesías (1995-2002)</p>
-  <p>Cursos Adicionales: Atención al cliente, Liderazgo, Capacitaciones en Hoteles y Destinos Turísticos.</p>
-</section>
-
-<section class="work-experience">
-    <h2>EXPERIENCIA LABORAL <i class="fa-solid fa-briefcase"></i></h2>
-    <ul>
+      <div class="fotografia">
+        <img src=Vane.jpg alt="Foto de Vane">
+      </div> 
+      <h1>VANESSA ELIZABETH VILLAGRA CERECEDA</h1>
+    </header>
+    <aside class="details">
+      <h2>DETALLES <i class="fa-solid fa-headphones"></i></h2>
+      <p><strong>Email:</strong> vanessa.cereceda@gmail.com</p>
+      <p><strong>Teléfono:</strong> +56 9 7947 6776</p>
+      <p><strong>Ubicación:</strong> Santiago, Chile</p>
+    </aside>
+    <section class="profile">
+      <h2>PERFIL <i class="fa-solid fa-user-pen"></i></h2>
+      <p>Técnico en Turismo con vasta experiencia en el área turística, especializada en atención y fidelización de clientes, tanto presencial como venta online.</p>
+    </section>
+    <section class="studies">
+      <h2>ESTUDIOS <i class="fa-solid fa-graduation-cap"></i></h2>
+      <p>Especialidad: Técnico en Turismo, Turismo Cocha S.A (2007-2008)</p>
+      <p>Enseñanza Media: Liceo Particular Eyzaguirre (2003-2006)</p>
+      <p>Enseñanza Básica: Fundación Domingo Matte Mesías (1995-2002)</p>
+      <p>Cursos Adicionales: Atención al cliente, Liderazgo, Capacitaciones en Hoteles y Destinos Turísticos.</p>
+    </section>
+    <section class="work-experience">
+      <h2>EXPERIENCIA LABORAL <i class="fa-solid fa-briefcase"></i></h2>
+      <ul>
         <li><i class="fas fa-plane"></i> TURISMO COCHA, Consultora de Viajes (Abril 2008 - Julio 2018)</li>
         <li><i class="fas fa-phone"></i> Grupo Unísono, Atención al cliente (Septiembre 2020 - Julio 2022)</li>
         <li><i class="fas fa-carrot"></i> Agrolam Ltda, Supervisora Retail (Julio 2022 - Presente)</li>
-    </ul>
-    <img src="C:/Users/vanes/OneDrive/Escritorio/avion.jpg" alt="Avión" style="width: 80%; height: auto;">
-</section>
-<section class="hobbies">
-  <h2>HOBBIES <i class="fa-brands fa-square-web-awesome-stroke"></i></h2>
-  <ul>
-    <li><i class="fas fa-plane"></i> Viajar</li>
-    <li><i class="fa-solid fa-dumbbell"></i> Gimnasio</li>
-    <li><i class="fa-solid fa-hiking"></i> Trekking</li>
-
-    <img src="C:\Users\vanes\OneDrive\Escritorio\san francisco.jpg" alt="san francisco" style="width: 100%; height: auto; border-radius: 5px;">
-    
-    
-  </ul>
-</section>
-<section class="extra-content">
-    <h2>INSPIRACIÓN <i class="fa-solid fa-fire"></i></h2>
-    <p>"Viajar es descubrir que todos están equivocados sobre los otros países." - Aldous Huxley</p>
-</section>
-<footer>
-    <div id="outer">
+      </ul>
+      <img src=avion.jpg alt="Avión" style="width: 80%; height: auto;">
+    </section>
+    <section class="hobbies">
+      <h2>HOBBIES <i class="fa-brands fa-square-web-awesome-stroke"></i></h2>
+      <ul>
+        <li><i class="fas fa-plane"></i> Viajar</li>
+        <li><i class="fa-solid fa-dumbbell"></i> Gimnasio</li>
+        <li><i class="fa-solid fa-hiking"></i> Trekking</li>
+      </ul>
+      <div class="image-container">
+        <img src=sanfrancisco.jpg alt="san francisco" style="width: 100%; height: auto; border-radius: 5px; margin-top: 10px;">
+      </div>
+    </section>
+    <section class="extra-content">
+      <h2>INSPIRACIÓN <i class="fa-solid fa-fire"></i></h2>
+      <p>"Viajar es descubrir que todos están equivocados sobre los otros países." - Aldous Huxley</p>
+    </section>
+    <footer>
+      <div id="outer">
         <div class="button_slide slide_left">
-            <a href="https://github.com/Vane2130/Vane"><i class="fa-brands fa-github"></i>GitHub Vanessa Villagra<i class="fa-brands fa-github"></i></a>
+          <a href="https://github.com/Vane2130/Vane"><i class="fa-brands fa-github"></i>GitHub Vanessa Villagra<i class="fa-brands fa-github"></i></a>
         </div>
-    </div>
-</footer>
-</div>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
