--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/fba55dc263.js" crossorigin="anonymous"></script>
 </head>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/fba55dc263.js" crossorigin="anonymous"></script>
+</head>
+
 <body>
   <div class="resume">
     <header>
