--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Curriculum Vanessa Villagra</title>
-<link rel="stylesheet" href="style.css">
-<script src="https://kit.fontawesome.com/fba55dc263.js" crossorigin="anonymous"></script>
-</head>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vanessa Villagra</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/fba55dc263.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-  <div class="resume">
-    <header>
-      <div class="fotografia">
-        <img src=Vane.jpg alt="Foto de Vane">
-      </div> 
+  <div class="container resume">
+    <header class="text-center text-white py-3 mb-3" style="background-color: #ec407a;">
+      <div class="fotografia d-inline-block">
+        <img src="Vane.jpg" alt="Foto de Vane" class="rounded-circle" style="border: 4px solid white; width: 120px; height: 120px;">
+      </div>
       <h1>VANESSA ELIZABETH VILLAGRA CERECEDA</h1>
     </header>
-    <aside class="details">
+    
+    <aside class="details bg-light p-3 mb-3 rounded">
       <h2>DETALLES <i class="fa-solid fa-headphones"></i></h2>
       <p><strong>Email:</strong> vanessa.cereceda@gmail.com</p>
       <p><strong>Teléfono:</strong> +56 9 7947 6776</p>
       <p><strong>Ubicación:</strong> Santiago, Chile</p>
     </aside>
-    <section class="profile">
-      <h2>PERFIL <i class="fa-solid fa-user-pen"></i></h2>
-      <p>Técnico en Turismo con vasta experiencia en el área turística, especializada en atención y fidelización de clientes, tanto presencial como venta online.</p>
-    </section>
-    <section class="studies">
-      <h2>ESTUDIOS <i class="fa-solid fa-graduation-cap"></i></h2>
-      <p>Especialidad: Técnico en Turismo, Turismo Cocha S.A (2007-2008)</p>
-      <p>Enseñanza Media: Liceo Particular Eyzaguirre (2003-2006)</p>
-      <p>Enseñanza Básica: Fundación Domingo Matte Mesías (1995-2002)</p>
-      <p>Cursos Adicionales: Atención al cliente, Liderazgo, Capacitaciones en Hoteles y Destinos Turísticos.</p>
-    </section>
-    <section class="work-experience">
+
+    <div class="row">
+      <section class="col-md-8 profile bg-light p-3 mb-3 rounded">
+        <h2>PERFIL <i class="fa-solid fa-user-pen"></i></h2>
+        <p>Técnico en Turismo con vasta experiencia en el área turística, especializada en atención y fidelización de clientes, tanto presencial como venta online.</p>
+      </section>
+
+      <section class="col-md-4 studies bg-light p-3 mb-3 rounded">
+        <h2>ESTUDIOS <i class="fa-solid fa-graduation-cap"></i></h2>
+        <p>Especialidad: Técnico en Turismo, Turismo Cocha S.A (2007-2008)</p>
+        <p>Enseñanza Media: Liceo Particular Eyzaguirre (2003-2006)</p>
+        <p>Enseñanza Básica: Fundación Domingo Matte Mesías (1995-2002)</p>
+        <p>Cursos Adicionales: Atención al cliente, Liderazgo, Capacitaciones en Hoteles y Destinos Turísticos.</p>
+      </section>
+    </div>
+    
+    <section class="work-experience bg-light p-3 rounded mb-3">
       <h2>EXPERIENCIA LABORAL <i class="fa-solid fa-briefcase"></i></h2>
       <ul>
         <li><i class="fas fa-plane"></i> TURISMO COCHA, Consultora de Viajes (Abril 2008 - Julio 2018)</li>
         <li><i class="fas fa-phone"></i> Grupo Unísono, Atención al cliente (Septiembre 2020 - Julio 2022)</li>
         <li><i class="fas fa-carrot"></i> Agrolam Ltda, Supervisora Retail (Julio 2022 - Presente)</li>
       </ul>
-      <img src=avion.jpg alt="Avión" style="width: 80%; height: auto;">
+      <img src="avion.jpg" alt="Avión" class="img-fluid" style="max-width: 75%;">
     </section>
-    <section class="hobbies">
+
+    <section class="hobbies bg-light p-3 rounded mb-3">
       <h2>HOBBIES <i class="fa-brands fa-square-web-awesome-stroke"></i></h2>
       <ul>
         <li><i class="fas fa-plane"></i> Viajar</li>
@@ -54,19 +57,14 @@
         <li><i class="fa-solid fa-hiking"></i> Trekking</li>
       </ul>
       <div class="image-container">
-        <img src=sanfrancisco.jpg alt="san francisco" style="width: 100%; height: auto; border-radius: 5px; margin-top: 10px;">
+        <img src="sanfrancisco.jpg" alt="San Francisco" class="img-fluid rounded" style="max-width: 75%;">
       </div>
     </section>
-    <section class="extra-content">
-      <h2>INSPIRACIÓN <i class="fa-solid fa-fire"></i></h2>
-      <p>"Viajar es descubrir que todos están equivocados sobre los otros países." - Aldous Huxley</p>
-    </section>
-    <footer>
-      <div id="outer">
-        <div class="button_slide slide_left">
-          <a href="https://github.com/Vane2130/Vane"><i class="fa-brands fa-github"></i>GitHub Vanessa Villagra<i class="fa-brands fa-github"></i></a>
-        </div>
-      </div>
+
+    <footer class="text-center text-white py-3" style="background-color: #ec407a;">
+      <a href="https://github.com/Vane2130/Vane" class="text-white">
+        <i class="fa-brands fa-github"></i> GitHub Vanessa Villagra
+      </a>
     </footer>
   </div>
 </body>
